--- a/public/visual.css
+++ b/public/visual.css
@@ -1,34 +1,3 @@
-/* .container {
-  display: flex;
-}
-
-#visual {
-  display: flex;
-  flex-wrap: wrap;
-  width: 90%;
-}
-
-[data-person-tip]:before {            
-  position : absolute;
-  content : attr(data-person-tip);
-  opacity : 1;
-  
-  transition: all 0.15s ease;
-  padding: 20px;
-  color: #333;
-  border-radius: 10px;
-  box-shadow: 2px 2px 1px silver;  
-}
-
-[data-person-tip]:hover:before {        
-  opacity : 1;
-  /* customizable
-  color: whitesmoke;
-  background: black;
-  margin-left: 50px;    
-} */
-
- 
 .container {
   display: flex;
 }
@@ -41,19 +10,15 @@
 
 /* Tooltip text */
 .tooltip {
-  width: 120px;
+  width: auto;
   background-color: black;
+
   color: #fff;
-  text-align: center;
-  padding: 5px 0;
+  text-align: left;
+  padding: 10px;
   border-radius: 6px;
  
   /* Position the tooltip text */
   position: absolute;
   z-index: 1;
-}
-
-/* Show the tooltip text when you mouse over the tooltip container */
-.container > #visual > .person:hover{
-  visibility: visible;
 }
